--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 python-telegram-bot==20.7
-google-generativeai==0.5.4
-pydub==0.25.1
-gTTS==2.5.1
-python-dotenv==1.0.1
-flask==2.3.3
-gunicorn==21.2.0
-pymongo==4.6.3
+pydub
+gTTS
+python-dotenv
+flask
+google-generativeai
+pymongo
