--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 python-telegram-bot==20.7
-gTTS
-python-dotenv
-flask
-google-generativeai
-pymongo
-gunicorn
+gTTS==2.4.0
+python-dotenv==1.0.0
+flask==3.0.2
+google-generativeai==0.3.2
+pymongo==4.6.2
+gunicorn==21.2.0
+ffmpeg-python==0.2.0
